Fixed missing showcase images in first cell

--- a/scene_segmentation.ipynb
+++ b/scene_segmentation.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "(The first 470 images are unlabeled and will be ignored.)\n",
     "\n",
-    "![input image](highway/input/in001600.jpg \"Title\") ![gt image](highway/groundtruth/gt001600.png \"Title\")"
+    "![input image](showcase/in001600.jpg \"Title\") ![gt image](showcase/gt001600.png \"Title\")"
    ]
   },
   {
