No train data leak into val/test data found

--- a/scene_segmentation.ipynb
+++ b/scene_segmentation.ipynb
@@ -550,7 +550,7 @@
    "metadata": {},
    "source": [
     "# Training and Test Error over each Epoch\n",
-    "Later comment: TODO Looks very suspicious. Must be revisited."
+    "Later comment: TODO Looks very suspicious. Must be revisited. EDIT: Data split and loader setup seem correct. Did not find any leakage yet. Maybe investigate training vs val/test loss without training data augmentation? still suspicious.."
    ]
   },
   {
