--- a/scene_segmentation.ipynb
+++ b/scene_segmentation.ipynb
@@ -31,12 +31,12 @@
     "\n",
     "Input: \n",
     "  - RGB \n",
-    "  - Shape (3,320,240)\n",
+    "  - Shape $(3,240,320)$\n",
     "\n",
     "Label:\n",
     "  - Greyscale\n",
     "  - 0:black:background, 170:grey:foreground-edges,  255:white:foreground\n",
-    "  - Shape (1,320,240)\n",
+    "  - Shape $(1,240,320)$\n",
     "\n",
     "\n",
     "![input image](showcase/in001600.jpg \"Title\") ![gt image](showcase/gt001600.png \"Title\")"
@@ -100,12 +100,10 @@
    },
    "source": [
     "## Pytorch Dataset Wrapper\n",
-    "Inherits from **torch.utils.data.Dataset** and implements two methods.\n",
-    "- **def \\_\\_getitem\\_\\_(self, idx)**: given an integer idx returns the data x,y\n",
-    "    - x is the image as a float tensor of shape: $(3,H,W)$\n",
-    "    - y is the label image as a mask of shape: $(H,W)$ each pixel should contain the label 0 (background) or 1 (foreground). It is recommended to use the type torch.long\n",
-    "\n",
-    "Image resolution is decreased to fit at once into memory and GPU. Some regularization through color jittering."
+    "Inherits from **torch.utils.data.Dataset** and implements:\n",
+    "- **def \\_\\_getitem\\_\\_(self, idx)**: given an integer idx returns the data (img, mask)\n",
+    "    - img is the image as a float tensor of shape: $(3,H,W)$\n",
+    "    - mask is the label image as a segmentation mask of shape: $(1,H,W)$; each pixel should contain the label 0 (background) or 1 (foreground)."
    ]
   },
   {
@@ -172,10 +170,10 @@
    },
    "source": [
     "## Fully-Convolutional Neural Network\n",
-    "The CNN inspired by U-Net is flexible to the input and output resolution and includes residual blocks.\n",
+    "The CNN inspired by U-Net is flexible to the input and output resolution and has skip connections in parallel to the bottleneck.\n",
     "\n",
     "- input: a batch of images $(B,3,H,W)$\n",
-    "- output: a batch of pixel-wise class predictions $(B,C,H,W)$, where $C=2$"
+    "- output: a batch of pixel-wise class predictions $(B,1,H,W)$"
    ]
   },
   {
@@ -249,11 +247,7 @@
     "id": "a85364b0-7010-4710-9373-94a89db8d7c5"
    },
    "source": [
-    "## Train and Validation Function\n",
-    "- Loss: Cross Entropy\n",
-    "- Metrics:\n",
-    "    - Pixel-wise: Accuracy, Precision, Recall\n",
-    "    - Image-wise: Intersection over Union"
+    "## Train and Validation Function"
    ]
   },
   {
@@ -316,7 +310,8 @@
    "id": "e6200997",
    "metadata": {},
    "source": [
-    "# Augmentation and Data instanciation"
+    "## Augmentation and Data instantiation\n",
+    "- 90/10 split"
    ]
   },
   {
@@ -361,14 +356,14 @@
    "metadata": {},
    "source": [
     "## Training Loop\n",
-    "- 80/20 Data Split\n",
     "- PyTorch DataLoaders\n",
+    "- BCE Criterion\n",
     "- Adam Optimizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4b7a24a0-1c68-498c-9858-252402d1861a",
    "metadata": {
     "colab": {
@@ -474,6 +469,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83e603ff-a32e-4d90-84d9-eba8570d6e63",
+   "metadata": {
+    "id": "83e603ff-a32e-4d90-84d9-eba8570d6e63"
+   },
+   "source": [
+    "## Report TODO: Rework\n",
+    "- Pixel-wise: Accuracy, Precision, Recall\n",
+    "- Image-wise: Intersection over Union"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a1109e5d-a62a-4210-b068-2a8dbff711bd",
@@ -511,16 +518,6 @@
    ],
    "source": [
     "results.shape, acc.shape, prec.shape, rec.shape, iou.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83e603ff-a32e-4d90-84d9-eba8570d6e63",
-   "metadata": {
-    "id": "83e603ff-a32e-4d90-84d9-eba8570d6e63"
-   },
-   "source": [
-    "## Report"
    ]
   },
   {
@@ -594,8 +591,7 @@
    "id": "80a0a734-3078-4da2-ad16-f04fb51bfee3",
    "metadata": {},
    "source": [
-    "# Training and Test Error over each Epoch\n",
-    "Later comment: TODO Looks very suspicious. Must be revisited. EDIT: Data split and loader setup seem correct. Did not find any leakage yet. Maybe investigate training vs val/test loss without training data augmentation? still suspicious.."
+    "# Training and Test Error over each Epoch\n"
    ]
   },
   {
